--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "nuxt": "^2.0.0",
     "vue-i18n": "^7.3.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "node-sass": "^4.13.0",
+    "sass-loader": "^8.0.0"
+  }
 }
